- before ftp to stream upload changes